--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
 Flask==3.0.0
-Flask_SQLAlchemy==3.1.1
-psycopg[binary]==3.2.1
+Flask-SQLAlchemy==3.1.1
+Flask-CORS==4.0.0
 alembic==1.13.2
 flask-jwt-extended==4.6.0
 passlib[bcrypt]==1.7.4
-pydantic==2.8.2
-celery==5.4.0
-redis==5.0.8
+pydantic==2.5.0
+celery==5.3.4
+redis==5.0.1
 python-dotenv==1.0.1
-
-pytest==8.3.2
-httpx==0.27.2
+pytest==8.0.0
+pytest-cov==4.1.0
+httpx==0.25.2
