--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,1 +1,38 @@
+version: '3.8'
 
+services:
+  db:
+    image: postgres:15-alpine
+    container_name: acled_postgres
+    environment:
+      POSTGRES_USER: acled_user
+      POSTGRES_PASSWORD: acled_password
+      POSTGRES_DB: acled_db
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U acled_user -d acled_db"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  api:
+    build: .
+    container_name: acled_api
+    environment:
+      FLASK_DEBUG: "true"
+      JWT_SECRET_KEY: dev-secret-key
+      DATABASE_URL: postgresql://acled_user:acled_password@db:5432/acled_db
+    ports:
+      - "5001:5000"
+    volumes:
+      - .:/app
+    depends_on:
+      db:
+        condition: service_healthy
+    command: sh -c "python scripts/import_csv.py data/acled_sample_conflict_data.csv && python run.py"
+
+volumes:
+  postgres_data:
