--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Flask==3.0.0
 Flask-SQLAlchemy==3.1.1
 Flask-CORS==4.0.0
+psycopg2-binary==2.9.9
 alembic==1.13.2
 flask-jwt-extended==4.6.0
 passlib[bcrypt]==1.7.4
