--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ flask-jwt-extended==4.6.0
 passlib[bcrypt]==1.7.4
 pydantic==2.5.0
 python-dotenv==1.0.1
+flasgger==0.9.7.1
 pytest==8.0.0
 pytest-cov==4.1.0
 httpx==0.25.2
